<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
xmlns:app="http://schemas.android.com/apk/res-auto"
xmlns:tools="http://schemas.android.com/tools"
android:id="@+id/main"
android:layout_width="match_parent"
android:layout_height="match_parent"
tools:context=".login"
android:background="@drawable/gradiente"
    >

<androidx.appcompat.widget.Toolbar
    android:id="@+id/toolbar"
    android:layout_width="0dp"
    android:layout_height="80dp"
    android:background="@color/indigo"
    android:elevation="4dp"
    app:layout_constraintTop_toTopOf="parent"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintEnd_toEndOf="parent">


    <TextView
        android:id="@+id/tvTitulo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/mi_salud"
        android:textSize="40sp"
        android:textStyle="bold"
        android:layout_gravity="center"
        />



</androidx.appcompat.widget.Toolbar>


    <TextView
        android:textColor="@color/white"
        android:textStyle="bold"
        android:layout_marginBottom="520dp"
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/login"
        android:textAppearance="@style/TextAppearance.Material3.DisplayLarge"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/toolbar" />

<com.google.android.material.textfield.TextInputLayout
    android:layout_marginHorizontal="30dp"
    android:id="@+id/tilEmail"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    app:startIconDrawable="@drawable/ic_email"
    android:hint="@string/correo_electronico"
    android:layout_marginTop="50dp"
    app:layout_constraintTop_toBottomOf="@+id/textView"
    app:startIconTint="@color/white"
    app:boxBackgroundMode="outline"
    app:boxStrokeColor="@color/white"
    android:textColorHint="@color/white"

    >

    <com.google.android.material.textfield.TextInputEditText
        android:textColor="@color/white"
        android:id="@+id/etEmail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

</com.google.android.material.textfield.TextInputLayout>

<com.google.android.material.textfield.TextInputLayout
    android:layout_marginHorizontal="30dp"
    android:id="@+id/tilPassword"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    app:endIconMode="password_toggle"
    app:startIconDrawable="@drawable/ic_pass"
    android:hint="@string/contrase_a"
    android:layout_marginTop="20dp"
    app:layout_constraintTop_toBottomOf="@+id/tilEmail"
    app:startIconTint="@color/white"
    app:boxBackgroundMode="outline"
    app:boxStrokeColor="@color/white"
    android:textColorHint="@color/white"
    app:endIconTint="@color/white"
    >

    <com.google.android.material.textfield.TextInputEditText
        android:textColor="@color/white"
        android:id="@+id/etPassword"
        android:layout_width="match_parent"
        android:inputType="textPassword"
        android:layout_height="wrap_content" />

</com.google.android.material.textfield.TextInputLayout>

<com.google.android.material.button.MaterialButton
    android:backgroundTint="@color/indigo"
    android:textColor="@color/black"

    android:layout_marginHorizontal="30dp"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:text="@string/iniciar_sesion"
    android:id="@+id/btnLogin"
    app:layout_constraintTop_toBottomOf="@+id/tilPassword"
    android:layout_marginTop="50dp"/>

<TextView
    android:textColor="@color/white"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:id="@+id/tvRegistrar"
    android:text="@string/no_estas_registrado_registrate"
    android:layout_marginTop="10dp"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toBottomOf="@+id/btnLogin" />



</androidx.constraintlayout.widget.ConstraintLayout>




