<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
xmlns:app="http://schemas.android.com/apk/res-auto"
xmlns:tools="http://schemas.android.com/tools"
android:id="@+id/main"
android:layout_width="match_parent"
android:layout_height="match_parent"
tools:context=".MainActivity"
android:background="@drawable/gradiente"
    >

<androidx.appcompat.widget.Toolbar
    android:id="@+id/toolbar"
    android:layout_width="0dp"
    android:layout_height="80dp"
    android:background="@color/indigo"
    android:elevation="4dp"
    app:layout_constraintTop_toTopOf="parent"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintEnd_toEndOf="parent">


    <TextView
        android:id="@+id/tvTitulo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/mi_salud"
        android:textSize="40sp"
        android:textStyle="bold"
        android:layout_gravity="center"
        />


</androidx.appcompat.widget.Toolbar>

<TextView
    android:id="@+id/tvIniciarSesion"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:text="@string/iniciar_sesion"
    android:textColor="@color/white"
    android:textSize="40sp"
    android:textStyle="bold"
    app:layout_constraintTop_toBottomOf="@+id/toolbar"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintEnd_toEndOf="parent"
    android:layout_marginTop="30dp"
    />


    <TextView
        android:textColor="@color/white"
        android:textSize="27sp"
        android:textStyle="bold"
        android:id="@+id/textVieww"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/ingrese_sus_datos_para_usar_la_aplicacion"
        android:textAppearance="@style/TextAppearance.Material3.DisplayLarge"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:textAlignment="center"

        />



    <com.google.android.material.button.MaterialButton
        android:backgroundTint="@color/indigo"
        android:textColor="@color/black"


        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/ingresar"
        android:textSize="25sp"
        android:id="@+id/btnSi"
        app:layout_constraintTop_toBottomOf="@+id/textVieww"
        android:layout_marginTop="30dp"
        android:layout_marginHorizontal="100dp"/>


</androidx.constraintlayout.widget.ConstraintLayout>