<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
xmlns:app="http://schemas.android.com/apk/res-auto"
xmlns:tools="http://schemas.android.com/tools"
android:id="@+id/main"
android:layout_width="match_parent"
android:layout_height="match_parent"
tools:context=".RegistrarActivity"
android:background="@drawable/gradiente"
    >

<androidx.appcompat.widget.Toolbar
    android:id="@+id/toolbar"
    android:layout_width="0dp"
    android:layout_height="80dp"
    android:background="@color/indigo"
    android:elevation="4dp"
    app:layout_constraintTop_toTopOf="parent"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintEnd_toEndOf="parent">


    <TextView
        android:id="@+id/tvTitulo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/mi_salud"
        android:textSize="40sp"
        android:textStyle="bold"
        android:layout_gravity="center"
        />

    <Button
        style="?attr/materialIconButtonStyle"
        android:id="@+id/flechaRegistrar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:icon="@drawable/back_arrow"
        app:iconTint="@color/black"
        android:contentDescription="@string/atrasver"
        app:iconSize="40dp"
        />


</androidx.appcompat.widget.Toolbar>


    <TextView
        android:textColor="@color/white"
        android:textStyle="bold"
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:text="@string/registrar_usuario"
        android:textAppearance="@style/TextAppearance.Material3.DisplayMedium"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/toolbar"
        android:layout_marginBottom="500dp"
        />

<com.google.android.material.textfield.TextInputLayout
    android:id="@+id/tilEmail"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    app:startIconDrawable="@drawable/ic_email"
    android:hint="@string/correo_electronico"
    android:layout_marginHorizontal="50dp"
    android:layout_marginTop="50dp"
    app:layout_constraintTop_toBottomOf="@+id/textView"
    app:startIconTint="@color/white"
    app:boxBackgroundMode="outline"
    app:boxStrokeColor="@color/white"
    android:textColorHint="@color/white"
    >

    <com.google.android.material.textfield.TextInputEditText
        android:textColor="@color/white"
        android:id="@+id/etEmail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

</com.google.android.material.textfield.TextInputLayout>

<com.google.android.material.textfield.TextInputLayout
    android:id="@+id/tilPassword"
    android:layout_marginHorizontal="50dp"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    app:endIconMode="password_toggle"
    app:startIconDrawable="@drawable/ic_pass"
    android:hint="@string/contrase_a"
    android:layout_marginTop="20dp"
    app:layout_constraintTop_toBottomOf="@+id/tilEmail"
    app:startIconTint="@color/white"
    app:boxBackgroundMode="outline"
    app:boxStrokeColor="@color/white"
    android:textColorHint="@color/white"
    app:endIconTint="@color/white"
    >

    <com.google.android.material.textfield.TextInputEditText
        android:textColor="@color/white"
        android:id="@+id/etPassword"
        android:layout_width="match_parent"
        android:inputType="textPassword"
        android:layout_height="wrap_content" />

</com.google.android.material.textfield.TextInputLayout>

<com.google.android.material.textfield.TextInputLayout
    android:id="@+id/tilPassword2"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginHorizontal="50dp"
    android:hint="@string/confirmar_contrase_a"
    android:layout_marginTop="20dp"
    app:endIconMode="password_toggle"
    app:layout_constraintTop_toBottomOf="@+id/tilPassword"
    app:startIconDrawable="@drawable/ic_pass"
    app:startIconTint="@color/white"
    app:boxBackgroundMode="outline"
    app:boxStrokeColor="@color/white"
    android:textColorHint="@color/white"
    app:endIconTint="@color/white"
    >

    <com.google.android.material.textfield.TextInputEditText
        android:textColor="@color/white"
        android:id="@+id/etPassword2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textPassword"
        />

</com.google.android.material.textfield.TextInputLayout>

<com.google.android.material.button.MaterialButton
    android:backgroundTint="@color/indigo"
    android:textColor="@color/black"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginHorizontal="50dp"
    android:text="@string/registrar_usuario"
    android:id="@+id/btnRegistrar"
    app:layout_constraintTop_toBottomOf="@+id/tilPassword2"
    android:layout_marginTop="50dp"/>


</androidx.constraintlayout.widget.ConstraintLayout>